# $Id: configure.in,v 1.3 2006-06-26 15:27:32 hww3 Exp $
AC_INIT(module.pmod.in)

AC_MODULE_INIT()




AC_DEFUN(PKG_CHECK_SQLITE, [

  SQLITE_VER=0
  PKG_CHECK_MODULES(SQLITE, sqlite3 >= 3.0.0,
  [
    AC_CHECK_HEADERS(sqlite3.h)
    AC_CHECK_LIB(sqlite3, sqlite3_open) 
    
    SQLITE_VER=3
  ],
  [
    PKG_CHECK_MODULES(SQLITE, sqlite >= 2.0.0)
    SQLITE_VER=2
    AC_CHECK_HEADERS(sqlite.h)
    AC_CHECK_LIB(sqlite, sqlite_open) 
  ])
  AC_SUBST(SQLITE_VER)
])




AC_CONFIG_HEADERS(sqlite_config.h)

PKG_CHECK_SQLITE


AC_CHECK_HEADERS(unistd.h)

AC_CHECK_FUNCS(usleep)

AC_SUBST(SQLITE_CFLAGS) 
AC_SUBST(SQLITE_LIBS)

AC_OUTPUT(Makefile)


