# $Id: configure.in,v 1.4 2007-02-02 18:13:12 hww3 Exp $
AC_INIT(module.pmod.in)

AC_MODULE_INIT()




AC_DEFUN(PKG_CHECK_SQLITE, [

  SQLITE_VER=0
    AC_CHECK_HEADERS(sqlite3.h)
    AC_CHECK_LIB(sqlite3, sqlite3_open) 
    
    SQLITE_VER=3
  AC_SUBST(SQLITE_VER)
])




AC_CONFIG_HEADERS(sqlite_config.h)

PKG_CHECK_SQLITE


AC_CHECK_HEADERS(unistd.h)

AC_CHECK_FUNCS(usleep)

AC_SUBST(SQLITE_CFLAGS) 
AC_SUBST(SQLITE_LIBS)

AC_OUTPUT(Makefile)


